# tools-online-retail-simulator

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  NEXT.md  README.md  ROADMAP.md  conftest.py  pyproject.toml
.claude/: implementation-plan-weekly-aggregation.md  settings.local.json
.claude/skills/: add-feature  code-simplifier  commit-push-pr  sync-general-skills  techdebt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
.kiro/steering/: coding.md  product.md  structure.md  tech.md
_support/workflows/: confirm-project-integrity.md  maintain-documentation.md
debug/: config_default_simulation.yaml  config_rule.json  config_synthesizer.json  explorations.ipynb  run.py  run_all_debug_notebooks.py  workflow_characteristics.py  workflow_standard.py
demo/: config_basic.json  config_enrichment.json  config_enrichment.yaml  config_rule.json  config_rule.yaml  config_simulation.yaml  config_synthesizer.json  config_synthesizer.yaml  example.py  example_enrichment.py  run_all_demos.py
demo/demo/output/: products.json  products_enriched.json  sales_counterfactual.json  sales_factual.json
demo/enrich/: config_custom_enrichment.yaml  config_default_enrichment.yaml  run_custom_enrichment.py  run_default_enrichment.py
demo/simulate/: config_custom_simulation.yaml  config_default_simulation.yaml  config_product_details_simulation.yaml  config_synthesizer_simulation.yaml  run_custom_simulation.py  run_default_simulation.py  run_product_details_simulation.py  run_synthesizer_simulation.py  training_products.csv
development/: config_default_simulation.yaml  config_product_details.yaml  config_synthesizer_simulation.yaml  run.py  run_synthesizer_simulation.py  training_products.csv
docs/: GUIDELINES.md  api_reference.rst  architecture.md  conf.py  configuration.md  design.md  examples.md  index.md  index.rst  installation.md  use_cases.md  user-guide.md
docs/_static/: .gitkeep
docs/notebooks/: config_demo.yaml  config_enrichment.yaml  config_tutorial_enrichment.yaml  demo.ipynb  support.py  tutorial.ipynb
docs/source/: GUIDELINES.md  api_reference.rst  conf.py  configuration.md  design.md  index.md  installation.md  usage.md
docs/source/notebooks/: config_tutorial.yaml  demo.ipynb  tutorial.ipynb
online_retail_simulator/: __init__.py  config_defaults.json  config_defaults.yaml  config_processor.py  enrichment_application.py  enrichment_impact_library.py  simulate.py  simulate_characteristics.py  simulate_characteristics_rule_based.py  simulate_characteristics_synthesizer_based.py  simulate_metrics.py  simulate_metrics_rule_based.py  simulate_metrics_synthesizer_based.py  simulator.py  simulator_product_data.py  simulator_product_sales.py  simulator_rule_based.py  simulator_synthesizer_based.py
online_retail_simulator/core/: __init__.py  backends.py  registry.py
online_retail_simulator/enrich/: __init__.py  application.py  enrich.py  enrichment.py  enrichment_library.py  enrichment_registry.py
online_retail_simulator/manage/: __init__.py  jobs.py
online_retail_simulator/quality/: __init__.py  quality_score.py
online_retail_simulator/simulate/: __init__.py  characteristics.py  characteristics_rule_based.py  characteristics_synthesizer_based.py  metrics.py  metrics_rule_based.py  metrics_synthesizer_based.py  product_details.py  product_details_mock.py  product_details_ollama.py  products.py  products_rule_based.py  products_synthesizer_based.py  rule_registry.py  simulate.py
online_retail_simulator/storage/: __init__.py  storage.py
online_retail_simulator/tests/: __init__.py  config_rule.yaml  config_rule_weekly.yaml  config_synthesizer.json  config_synthesizer.yaml  conftest.py  df_start.csv  df_start.pkl  import_helpers.py  test_backends.py  test_characteristics_rule.py  test_characteristics_synthesizer.py  test_code_quality.py  test_e2e.py  test_enrichment.py  test_enrichment_registry.py  test_full.py  test_impact_library.py  test_metrics_rule.py  test_metrics_synthesizer.py  test_product_details.py  test_product_enrichment.py  test_products_rule.py  test_products_synthesizer.py  test_quality_score.py  test_randomness_control.py  test_registration.py  test_registry.py  test_rule_based.py  test_rule_registry.py  test_synthesizer_based.py
online_retail_simulator/tests/fixtures/: config_metrics_with_rates.yaml  config_products_basic.yaml  config_randomness_test.yaml  config_rule_full.yaml
tests/: config_rule.json  config_synthesizer.json  test_e2e.py  test_rule_based.py  test_synthesizer_based.py
workflows/: full_validation_workflow.md
