[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "online-retail-simulator"
version = "0.1.0"
description = "A lightweight Python package for simulating realistic retail data for experimentation and causal inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Eisenhauer IO"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "pyyaml",
    "requests",
    "artifact-store @ git+https://github.com/eisenhauerIO/utils-artifact-store.git"
]

[project.optional-dependencies]
synthesizer = [
    "sdv>=1.0.0"
]
cloud = [
    "artifact-store[cloud] @ git+https://github.com/eisenhauerIO/utils-artifact-store.git@b389fc5c3e558659626408996d9c896daed00b68",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/eisenhauerIO/tools-online-retail-simulator"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["online_retail_simulator"]

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
    "pandas>=1.3.0",
    "sdv>=1.0.0",
    "awswrangler>=3.0.0",
    "boto3>=1.26.0",
    "pytest>=7.0",
    "ruff>=0.8.0",
    "pre-commit",
    "nbconvert",
    "jupyter",
    "jupyterlab",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest online_retail_simulator/tests/ -v"
lint = "ruff check ."
format = "ruff format ."

[tool.hatch.envs.light]
skip-install = false
dependencies = [
    "pandas>=1.3.0",
    "pyyaml",
    "requests",
    "pytest>=7.0",
    "ruff>=0.8.0",
    "artifact-store @ git+https://github.com/eisenhauerIO/utils-artifact-store.git"
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "linkify-it-py>=2.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "jupyter",
    "nbconvert",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"

[tool.ruff]
extend-exclude = ["_external", "docs/build"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/import_helpers.py" = ["F401"]
"*synthesizer*.py" = ["F401"]
"*.ipynb" = ["D", "E", "F", "I"]
"tests/**" = ["D"]
"**/tests/**" = ["D"]
"online_retail_simulator/**" = ["D"]
"demo/**" = ["D", "E501", "F", "I"]
"development/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["online_retail_simulator"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["online_retail_simulator/tests"]
markers = [
    "llm: marks tests requiring LLM (skip without --with-llm)",
]
